<resources>
    <string name="app_name">W1 - VIEW AND VIEWGROUP</string>
    <string name="comment">A flexible view for providing a limited window into a large data set.
    </string>
    <string name="tile">completed with 9 local objects.</string>
    <string name="name_title">Title</string>
    <string name="name_surname">Name Surname</string>
    <string name="text_surname">nothing to commit</string>
    <string name="view">VIEW</string>
    <string name="menu">MENU</string>
    <string name="comment_title">Comments</string>
    <string name="text_button_home">Home</string>
    <string name="text_button_share">Share</string>
    <string name="text_button_hidde">Hide</string>
    <string name="text_edit_text">  Type your message</string>
    <string name="chat_left">Chat Left</string>
    <string name="chat_right">Chat Right</string>
    <string name="time_left">06:00 PM</string>
    <string name="time_right">06:30 PM</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="email_subcriptions">Email subcripstion</string>
    <string name="alow_email">Alow email from other</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="event_listener">Event Listener</string>
    <string name="menu_activity_fragment">Activity and Fragment</string>
    <string name="menu_button_send">Send</string>
    <string name="activity_fragment_name">Name</string>
    <string name="activity_fragment_age">Age</string>
    <string name="activity_fragment_email">Email</string>
    <string name="menu_recycleview">RecycleView</string>
    <string name="drawerlayout_email">hien.dao@asiantech.vn</string>
    <string name="friend_name">Name</string>
    <string name="mutual_friends">Mutual Friends</string>
    <string name="button_friend">Friend</string>
    <string name="button_friend_text">Friend</string>
    <string name="button_unfriend_text">Unfriend</string>
    <string name="menu_viewpage">ViewPage</string>
    <string name="menu_drawerlayout">DrawerLayout</string>
    <string name="drawerlayout_inbox">Inbox</string>
    <string name="drawerlayout_spam">Spam</string>
    <string name="drawerlayout_outbox">Outbox</string>
    <string name="drawerlayout_trash">Trash</string>
    <string name="title_dialog_drawer">Please choose your image</string>
    <string name="text_dialog_select_image">Choose your image</string>
    <string name="text_dialog_use_camera">Open camera</string>
    <string name="hint_api_editext">Enter artist name</string>
    <string name="button_api_check">Check</string>
    <string name="test_name_artist_api">None</string>
    <string name="test_number_tracker_api">0 Tracker</string>
    <string name="button_api_track">Track</string>
    <string name="Menu_API">API</string>
    <string name="button_start">Start</string>
    <string name="menu_button_service">Service</string>
    <string name="button_pause">Pause</string>
    <string name="notification_text">Notification</string>
    <string name="unit_test_login">Login</string>
    <string name="menu_unit_test">Unit Test</string>
</resources>
