<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnActivityAndFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_activity_fragment"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_recycleview"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnViewPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_viewpage"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_database"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Menu_API"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_button_service"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnUnitTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_unit_test"
            android:textSize="25dp" />
    </LinearLayout>
</LinearLayout>
