<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFragmentSend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_fragment_name"
        android:inputType="textPersonName"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_fragment_age"
        android:inputType="number"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/edtEmailSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_fragment_email"
        android:inputType="textEmailAddress"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_send" />
</LinearLayout>
