<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llViewAndViewGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgBackGroundTop"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:layout_alignParentTop="true"
                android:background="@android:color/holo_blue_light" />

            <ImageView
                android:id="@+id/imgCircle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgBackGroundTop"
                android:layout_alignRight="@+id/imgBackGroundTop"
                android:layout_marginBottom="-25dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_circle" />

            <ImageView
                android:id="@+id/imgCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imgCircle2"
                android:layout_marginBottom="-50dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/custom_circle" />

            <TextView
                android:id="@+id/tvNameSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imgCircle"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/imgCircle"
                android:text="@string/name_surname"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvNameSurname"
                android:layout_below="@+id/tvNameSurname"
                android:text="@string/text_surname"
                android:textSize="8dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/llButtonBar"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llTitleBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="@string/name_title"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/comment_title"
                        android:textAlignment="gravity"
                        android:textSize="25dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/llTitleBar"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/tvTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/tile"
                        android:textAlignment="gravity"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/comment"
                        android:textAlignment="gravity"
                        android:textSize="15dp" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/btnHide"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_button_hidde" />

                <Button
                    android:id="@+id/btnHome"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_button_home"
                    android:background="@drawable/custom_press_button_home"
                    android:textColor="@color/custom_color_text_button_home" />

                <Button
                    android:id="@+id/btnShare"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_button_share" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
