<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <TextView
                android:id="@+id/tvChatTextLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/img_chat_text_left"
                android:text="@string/chat_left"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTimeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_left"
                android:textSize="10sp"
                android:layout_alignBottom="@id/tvChatTextLeft"
                android:layout_alignRight="@id/tvChatTextLeft"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="8dp"
                tools:ignore="SmallSp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <TextView
                android:id="@+id/tvChatTextRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/img_chat_text_right"
                android:text="@string/chat_right"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTimeRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_right"
                android:textSize="10sp"
                android:layout_alignRight="@+id/tvChatTextRight"
                android:layout_alignBottom="@+id/tvChatTextRight"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="8dp"
                tools:ignore="SmallSp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <EditText
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="5"
            android:background="@drawable/edittex_border"
            android:hint="@string/text_edit_text"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textSize="25dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_circle"
            android:src="@drawable/custom_icon_button_send" />
    </LinearLayout>
</LinearLayout>
