<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="102dp">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorDarkGray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFriendName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/friend_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/imgAvatar"
        app:layout_constraintRight_toLeftOf="@id/btnFriend"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMutualFriends"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/mutual_friends"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/tvFriendName"
        app:layout_constraintRight_toLeftOf="@id/btnFriend"
        app:layout_constraintTop_toBottomOf="@id/tvFriendName" />

    <Button
        android:id="@+id/btnFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/button_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPink"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />
</android.support.constraint.ConstraintLayout>
