<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clArtistInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgAvatarArtist"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/custom_icon_person"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:text="@string/test_name_artist_api"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/imgAvatarArtist"
            app:layout_constraintRight_toRightOf="@id/imgAvatarArtist"
            app:layout_constraintTop_toBottomOf="@id/imgAvatarArtist" />

        <TextView
            android:id="@+id/tvNumberTracker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_number_tracker_api"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tvNameArtist"
            app:layout_constraintRight_toRightOf="@id/tvNameArtist"
            app:layout_constraintTop_toBottomOf="@id/tvNameArtist" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorDarkGreen"
            android:text="@string/button_api_track"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="@id/tvNumberTracker"
            app:layout_constraintRight_toRightOf="@id/tvNumberTracker"
            app:layout_constraintTop_toBottomOf="@id/tvNumberTracker" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clLoadArtistInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/progressBarLoadArtistInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
